workloads/llm/failover.yaml
# The URL.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: failover
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
      sectionName: http
  hostnames:
    - failover.home.arpa
  rules:
    - backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: smart
